# matrix-note

./: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts  tsconfig.json
.github/workflows/: build.yml  release.yml
mock/: editor-1.html  editor-2.html  sidebar-1.html  work-flow.html
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  note_repository.rs
src-tauri/src/commands/: mod.rs  note.rs  system.rs
src-tauri/src/models/: mod.rs  note.rs
src-tauri/src/services/: app_storage.rs  mod.rs  note_repository.rs  window_state.rs
src/app/: app.component.ts
src/app/components/context-menu/: context-menu.component.html  context-menu.component.ts
src/app/components/dialog/: customize.node.component.html  customize.node.component.ts  dialog-message.component.ts  dialog.component.html  dialog.component.ts
src/app/components/home/: home.component.html  home.component.ts
src/app/components/markdown-editor/: markdown-editor.component.html  (+1 more)
src/app/directives/: context-menu.directive.ts
src/app/models/: command.ts  context-menu.ts  document.ts  note.ts  setting.names.ts  tree.ts  uistates.ts
src/app/services/: command-service.ts  command.service.ts  context-menu.service.ts  dialog.service.ts  note-service.ts  note.service.ts  settings.service.ts  ui-state.service.ts  uistate.service.ts  workspace.service.ts
src/assets/styles/: markdown.css
(+29 files in other folders)
