[package]
name = "matrix-notebook"
version = "0.1.4"
edition = "2021"
description = "Desktop knowledge notebook powered by Tauri + Angular"
license = "MIT"
authors = ["Andy Lang"]

[lib]
name = "matrix_notebook_core"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-shell = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
